--- a/src/main/java/menupack/menu_form.form
+++ b/src/main/java/menupack/menu_form.form
@@ -4,7 +4,7 @@
    <NonVisualComponents>
     <Menu class="javax.swing.JMenuBar" name="jMenuBar1">
       <Properties>
-        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+        <Property name="preferredSize" type="java.awt.Dimensi12on" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1360, 25]"/>
         </Property>
       </Properties>
@@ -3409,7 +3409,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="BBS Billing"/>
+                    <Property name="text" type="java.lang.String" value="Swayam Billing"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -3425,7 +3425,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="(p) BBS Software   Email: BBSsoftwaretarget@gmail.com   Website: BBSerp.in"/>
+                    <Property name="text" type="java.lang.String" value="(p) Swayam Software   Email: Swayamsoftwaretarget@gmail.com   Website: Swayamerp.in"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
